fix: do not truncate tags in filter box

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -30,7 +30,7 @@
     @apply border-1 border-[#707070] px-2 py-1 text-center truncate;
   }
   .epfl-tag-light-removable {
-    @apply border-1 border-[#707070] hover:cursor-pointer px-2 py-1 text-center truncate;
+    @apply border-1 border-[#707070] hover:cursor-pointer px-2 py-1 text-center text-sm flex items-center content-between;
   }
   .epfl-times {
     @apply bg-[#e6e6e6] hover:bg-[#ff0000] hover:text-[#ffffff] leading-5 px-1;
